[gd_scene load_steps=7 format=3 uid="uid://borujsk6gckfo"]

[ext_resource type="Script" path="res://ui/menus/main_menu.gd" id="1_amord"]
[ext_resource type="Theme" uid="uid://cabxqkghtkxtt" path="res://ui/main_theme.tres" id="2_qtk7b"]
[ext_resource type="Texture2D" uid="uid://diwkibuq5kxjm" path="res://assets/presentation/bgv2.png" id="2_wdveu"]
[ext_resource type="Texture2D" uid="uid://b2ogpripo0kf6" path="res://assets/presentation/sitebannerv3.png" id="3_seys1"]
[ext_resource type="AudioStream" uid="uid://cyo24p2ra2hm5" path="res://assets/music/opening_theme.wav" id="3_wjc1p"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_63opd"]
texture = ExtResource("2_wdveu")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="main" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qtk7b")
theme_override_styles/panel = SubResource("StyleBoxTexture_63opd")
script = ExtResource("1_amord")

[node name="main" type="CenterContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qtk7b")

[node name="v_box_container" type="VBoxContainer" parent="main"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("2_qtk7b")

[node name="texture_rect" type="TextureRect" parent="main/v_box_container"]
layout_mode = 2
texture = ExtResource("3_seys1")

[node name="start" type="Button" parent="main/v_box_container"]
layout_mode = 2
theme = ExtResource("2_qtk7b")
text = "Start"

[node name="settings" type="Button" parent="main/v_box_container"]
layout_mode = 2
theme = ExtResource("2_qtk7b")
text = "Settings"

[node name="quit" type="Button" parent="main/v_box_container"]
layout_mode = 2
theme = ExtResource("2_qtk7b")
text = "Quit"

[node name="main_theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_wjc1p")
autoplay = true
bus = &"Music"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="main/v_box_container/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="main/v_box_container/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="main/v_box_container/quit" to="." method="_on_quit_pressed"]
